src/style/generals.scss
// @import "node_modules/bootstrap/scss/bootstrap";
@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    // background-color: #035AA8;
    background-image: url('/public/background/abstract.jpg');
    background-size: cover;
}

.bg-green {
    background-color: rgb(26, 197, 26);
}

.bg-yellow {
    background-color: yellow;
}

.bg-light-brown {
    background-color: burlywood;
}

.bg-light-blue {
    background-color: rgb(38, 188, 237);
}

.bg-red {
    background-color: red;
}

.margin-top-1 {
    margin-top: 1rem;
}

.margin-bottom-1 {
    margin-bottom: 1rem;
}

